--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@date-io/moment": "^1.3.9",
     "@material-ui/core": "^4.3.2",
+    "@material-ui/icons": "^4.2.1",
     "@material-ui/pickers": "^3.2.2",
     "moment": "^2.24.0",
     "react": "^16.9.0",
